--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Moving button | Jessica</title>
+    <title>You wanna be my girlfiend?</title>
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
     <div class="wrapper">
-        <h2 class="question">Do you love me?</h2>
+        <h2 class="question">เป็นแฟนกันไหม!!</h2>
         <img class="gif" alt="gif" src="https://media0.giphy.com/media/t8Lo2mPAzOcmVTgtGe/giphy.gif?cid=6c09b952231uyrnduhdsf4wqnxz03rv9wx3ni5sm0zolrxz3&ep=v1_stickers_related&rid=giphy.gif&ct=s"/>
         <div class="btn-group">
-            <button class="yes-btn">Yes</button>
-            <button class="no-btn">No</button>
+            <button class="yes-btn">เป็น</button>
+            <button class="no-btn">ไม่</button>
         </div>
     </div>
     <script src="script.js"></script>
