--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="wrapper">
         <h2 class="question">เป็นแฟนกันไหม!!</h2>
-        <img class="gif" alt="gif" src="https://media0.giphy.com/media/t8Lo2mPAzOcmVTgtGe/giphy.gif?cid=6c09b952231uyrnduhdsf4wqnxz03rv9wx3ni5sm0zolrxz3&ep=v1_stickers_related&rid=giphy.gif&ct=s"/>
+        <img class="gif" alt="gif" src="https://tenor.com/th/view/kung-fu-panda-gif-24482581"/>
         <div class="btn-group">
             <button class="yes-btn">เป็น</button>
             <button class="no-btn">ไม่</button>
