--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="wrapper">
         <h2 class="question">เป็นแฟนกันไหม!!</h2>
-        <img class="gif" alt="gif" src="https://tenor.com/th/view/kung-fu-panda-gif-24482581"/>
+        <img class="gif" alt="gif" src="https://media1.tenor.com/m/lSC3eQqp_EAAAAAC/po-kung-fu-panda.gif"/>
         <div class="btn-group">
             <button class="yes-btn">เป็น</button>
             <button class="no-btn">ไม่</button>
