--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>You wanna be my girlfiend?</title>
+    <title>You eat pig?</title>
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
     <div class="wrapper">
-        <h2 class="question">เป็นแฟนกันไหม!!</h2>
-        <img class="gif" alt="gif" src="https://media1.tenor.com/m/lSC3eQqp_EAAAAAC/po-kung-fu-panda.gif"/>
+        <h2 class="question">กินหมูมาใช่ไหม</h2>
+        <img class="gif" alt="gif" src="https://media1.tenor.com/m/2gflhlb5hboAAAAd/piggster-meeboo.gif"/>
         <div class="btn-group">
-            <button class="yes-btn">เป็น</button>
+            <button class="yes-btn">ใช่</button>
             <button class="no-btn">ไม่</button>
         </div>
     </div>
